#
# $Id: Makefile.am,v 1.1 2002/03/20 17:59:01 robofly Exp $
#

MAINTAINERCLEANFILES = Makefile.in configure config.guess missing \
                       config.sub ltconfig aclocal.m4 config.h.in \
                       install-sh mkinstalldirs

SUBDIRS              = @SNO_SUBDIRS@


dist-hook:
	cp -pr $(srcdir)/bootstrap $(distdir)


# End of Makefile.am

