#
# $Id: Makefile.am,v 1.1 2002/03/20 18:11:51 robofly Exp $
#

MAINTAINERCLEANFILES = Makefile.in

bin_PROGRAMS         = sno_position

sno_position_SOURCES = main.cpp      \
                       physics.h     \
		       physics.cpp

sno_position_LDADD   = -lnelmisc -lnelnet


# End of Makefile.am

